fix: fix the extra space between promption cards and the topic

--- a/frontend/assets/styles/index.css
+++ b/frontend/assets/styles/index.css
@@ -229,12 +229,9 @@
 
 /* Offer Section */
 
-.button-container {
-  margin-top: 20px;
-}
 
 .promotion-card {
-  margin-top: 0;
+  margin-top: -100px !important;
   display: block !important;
   width: 15rem !important;
   height: auto !important;
